--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -3,8 +3,8 @@ resources:
 - name: attendee-service
   type: git
   source:
-    uri: https://github.com/pivotal-education/pcf-attendee-service-code.git   #<----- REPLACE ME
-    branch: concourse_deployment
+    uri: https://github.com/vladimirnalitkin/pcf-attendee-service-code.git  #<----- REPLACE ME
+    branch: test
 
 - name: deploy-attendee-service
   type: cf
@@ -17,14 +17,34 @@ resources:
     skip_cert_check: true
 
 jobs:
-- name: build
+- name: test
   public: true
   plan:
-  - get: attendee-service
+  - get: attendee-service-source
+    trigger: true
+  - task: test
+    file: attendee-service-source/ci/tasks/test.yml
+
+- name: deploy
+  public: true
+  plan:
+  - get: attendee-service-source
+    trigger: true
+    passed: [test]
   - task: package
-    file: attendee-service/ci/tasks/package.yml
+    file: attendee-service-source/ci/tasks/package.yml
   - put: deploy-attendee-service
     params:
       manifest: attendee-service/manifest.yml
       path: package-output/attendee-service.jar
 
+- name: smoke_test
+  public: true
+  plan:
+  - get: attendee-service-source
+    trigger: true
+    passed: [deploy]
+  - task: smoke_test
+    file: attendee-service-source/ci/tasks/smoke-test.yml
+    params:
+      ATTENDEE_SERVICE_URL: https://attendee-service-droitural-relaxedness.local.pcfdev.io
