[test] Add pipeline

--- a/ci/tasks/smoke-test.yml
+++ b/ci/tasks/smoke-test.yml
@@ -11,7 +11,7 @@ params:
   ATTENDEE_SERVICE_URL: https://attendee-service-droitural-relaxedness.local.pcfdev.io
 
 inputs:
-- name: attendee-service-source
+- name: attendee-service
 
 run:
-  path: attendee-service-source/ci/tasks/smoke-test.sh
+  path: attendee-service/ci/tasks/smoke-test.sh
