--- a/ci/tasks/test.yml
+++ b/ci/tasks/test.yml
@@ -8,7 +8,7 @@ image_resource:
     tag: "8"
 
 inputs:
-- name: attendee-service-source
+- name: attendee-service
 
 run:
-  path: attendee-service-source/ci/tasks/test.sh
+  path: attendee-service/ci/tasks/test.sh
