[test] Add pipeline

--- a/ci/tasks/smoke-test.yml
+++ b/ci/tasks/smoke-test.yml
@@ -8,7 +8,7 @@ image_resource:
     tag: "latest"
 
 params:
-  ATTENDEE_SERVICE_URL: https://attendee-service-droitural-relaxedness.local.pcfdev.io
+  ATTENDEE_SERVICE_URL: http://attendee-service-droitural-relaxedness.local.pcfdev.io
 
 inputs:
 - name: attendee-service
