--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -47,4 +47,4 @@ jobs:
   - task: smoke_test
     file: attendee-service/ci/tasks/smoke-test.yml
     params:
-      ATTENDEE_SERVICE_URL: https://attendee-service-droitural-relaxedness.local.pcfdev.io
+      ATTENDEE_SERVICE_URL: http://attendee-service-droitural-relaxedness.local.pcfdev.io
